--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -53,7 +53,7 @@
               /></span>
             </div>
             <!-- Form -->
-            <form class="form-horizontal m-t-20" action="">
+            <form class="form-horizontal m-t-20" action="/signup" method="post">
               <div class="row p-b-30">
                 <div class="col-12">
                   <div class="input-group mb-3">
